src/objects/Client__c.object
<CustomObject>
    <description>Information about client</description>
    <fields>
        <fullName>Client_Name__c</fullName>
        <description>Name of the customer</description>
        <label>Client Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary contact for Client</description>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Clients</relationshipLabel>
        <relationshipName>Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Client</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Client_Name__c</columns>
        <columns>Location__c</columns>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Primary_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Client_by_RM</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Client_Name__c</columns>
        <columns>Location__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>rgre</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>rgre</value>
        </filters>
        <label>Client by RM</label>
    </listViews>
    <listViews>
        <fullName>Clients_By_PM</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Client_Name__c</columns>
        <columns>Location__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>pgre</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>pgre</value>
        </filters>
        <label>Clients By PM</label>
    </listViews>
    <nameField>
        <displayFormat>CN-{0000}</displayFormat>
        <label>Client No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>